--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,24 @@
-body{
-    margin:0;
+body {
+    margin: 0;
     padding: 0;
-    font-family: Arial,sans-serif;
-    display:flex;
+    font-family: Arial, sans-serif;
+    display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: linear-gradient(to right,#80c3ea,#7177ed);
+    background: url("background.gif") center center fixed;
+    background-size: cover;
     animation: color-transition 20s linear infinite;
-
-}
-@keyframes color-transition{
-0%{
-    background-position: 0%;
-}
-100%{
-    background-position: 100%;
-}
-
-}
+  }
+  
+  @keyframes color-transition {
+    0% {
+      background-position: 0%;
+    }
+    100% {
+      background-position: 100%;
+    }
+  }
 
 .registration-form{
 background-color: #fff;
